--- a/wordpress-mysql/docker-compose.yml
+++ b/wordpress-mysql/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '2'
+version: '3'
+
 services:
   db:
     image: mysql:5.7
@@ -20,6 +21,8 @@ services:
     ports:
       - "80:80"
     restart: always
+    volumes:
+      - "./.data/db:/etc/mysql"
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_PASSWORD: wordpress
